welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: ';' expected but string literal found.
	if (litMessage()) == "R" {droite(); avance()}
                             ^BDRBuggle:6: error: ';' expected but string literal found.
	if (litMessage()) == "L" {gauche(); avance()}
                             ^BDRBuggle:7: error: ';' expected but string literal found.
	if (litMessage()) == "I" {droite(); droite(); avance()}
                             ^BDRBuggle:8: error: ';' expected but string literal found.
	if (litMessage()) == "A" {avance()}
                             ^BDRBuggle:9: error: ';' expected but string literal found.
	if (litMessage())  == "B" {avance(); avance()}
                              ^BDRBuggle:10: error: ';' expected but string literal found.
	if (litMessage())  == "C" {avance(); avance(); avance()}
                              ^BDRBuggle:11: error: ';' expected but string literal found.
	if (litMessage())  == "Z" {recule()}
                              ^BDRBuggle:12: error: ';' expected but string literal found.
	if (litMessage())  == "Y" {recule(), recule()}
                              ^BDRBuggle:13: error: ';' expected but string literal found.
	if (litMessage())  == "X" {recule(), recule(), recule()}	
                              ^